--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
 <script type="text/javascript" src="js/waypoints.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="js/Chart.js"></script>
+
 
 </head>
 
@@ -93,35 +95,40 @@
 		<a class="button" data-slide="4" title=""></a>
 		<a class="resume">RESUME</a>
 
-	
-
 	</div><!--End of Slide 3-->
-
-
-
-
-
 
 	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
 		
-
 		<span class="slidetitle">SKILLS</span>
 		<span class="parallaxtext">Aspiring Full Stack Web Developer</span>
+		<canvas id="canvas" height="500" width="500" style="width: 500px; height: 500px;"></canvas>
+		<script>
+			var radarChartData = {
+					labels : ["HTML","CSS","jQuery","Javascript","Ruby","Ruby on Rails","Design"],
+					datasets : [
+						{
+							fillColor : "rgba(220,220,220,0.5)",
+							strokeColor : "rgba(220,220,220,1)",
+							pointColor : "rgba(220,220,220,1)",
+							pointStrokeColor : "#fff",
+							data : [80,80,30,0,0,0,80]
+						},
+						{
+							fillColor : "rgba(151,187,205,0.5)",
+							strokeColor : "rgba(151,187,205,1)",
+							pointColor : "rgba(151,187,205,1)",
+							pointStrokeColor : "#fff",
+							data : [80,80,50,90,80,80,80]
+						}
+					]
+				}
 
-			<a class="button" id= "up" data-slide="1" title=""></a>
+			var myRadar = new Chart(document.getElementById("canvas").getContext("2d")).Radar(radarChartData,{scaleShowLabels : false, pointLabelFontSize : 10});
 
+		</script>
+		<a class="button" id= "up" data-slide="1" title=""></a>
 
 	</div><!--End of Slide 4-->
-
-
-			
-
-
-
-
-
-
-
 
 </body>
 </html>
